travail pour charrez

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <ul>
       <li><%= link_to "Accueil", pages_home_path %></li>
       <li><%= link_to "Aide", pages_help_path %></li>
-      <li><%= link_to "Connexion", '#' %></li>
+      <li><%= link_to "liste des colocations", coloc_show_path %></li>
     </ul>
   </nav>
 </header>
