--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#help</h1>
-<p>Find me in app/views/pages/help.html.erb</p>
+<h1>Réseau des colocataires</h1>
+<p>
+  je sais pas si je pourrai t'être d'une quelconque aide mon ami
+</p>
