--- a/app/views/colocs/_form.html.erb
+++ b/app/views/colocs/_form.html.erb
@@ -15,6 +15,32 @@
     <%= f.label :adress %><br>
     <%= f.text_field :adress %>
   </div>
+
+  <div class="field">
+    <%= f.label :titre %><br>
+    <%= f.text_field :titre %>
+  </div>
+
+  <div class="field">
+    <%= f.label :superficie %><i>(en mètres au carré)</i><br>
+    <%= f.text_field :superficie %>
+  </div>
+
+  <div class="field">
+    <%= f.label :nb_habitants %><br>
+    <%= f.text_field :nb_habitants %>
+  </div>
+
+  <div class="field">
+    <%= f.label :nb_chambres %><br>
+    <%= f.text_field :nb_chambres %>
+  </div>
+
+  <div class="field">
+    <%= f.label :loyer %><i>(en €)</i><br>
+    <%= f.text_field :loyer %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
