--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,7 @@
     <ul>
       <li><%= link_to "À Propos", pages_about_path %></li>
       <li><%= link_to "Contact", pages_contact_path %></li>
+      <li><%= link_to "Éditer mon profil", edit_user_registration_path %></li>
       <li><a href="http://news.railstutorial.org/">News</a></li>
       <li><a href="http://www.railstutorial.org/">Tutoriel Rails</a></li>
     </ul>
