--- a/app/views/pages/list_users.html.erb
+++ b/app/views/pages/list_users.html.erb
@@ -4,6 +4,7 @@
   <% @users.each do |user| %>
     <li>
       <%= gravatar_image_tag user.email, :size => 30 %>
+      <%= user.nom %> <%= user.prenom %>
       <%= link_to "Ajouter", pages_add_user_path(:id => user.id) %>
     </li>
   <% end %>
