--- a/app/views/colocs/show.html.erb
+++ b/app/views/colocs/show.html.erb
@@ -24,5 +24,12 @@
   </tr>
 </table>
 
+<div id="map-canvas" style="height: 200px"></div>
+
 <%= link_to 'Edit', edit_coloc_path(@coloc) %> |
 <%= link_to 'Back', colocs_path %>
+
+<script type="text/javascript">
+  window.data = <%= @coloc.to_json.html_safe %>;
+  window.page = 'coloc';
+</script> 
