--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,8 @@
     <ul>
       <li><%= link_to "Accueil", pages_home_path %></li>
       <li><%= link_to "Aide", pages_help_path %></li>
-      <li><%= link_to "liste des colocations", colocs_path %></li>
-      <li><%= link_to "liste des colocataires", pages_list_users_path %></li>
+      <li><%= link_to "Liste des colocations", colocs_path %></li>
+      <li><%= link_to "Liste des colocataires", pages_list_users_path %></li>
       <li><%= link_to "Deconnexion", destroy_user_session_path, :method => "delete" %></li>
     </ul>
   </nav>
