--- a/app/views/colocs/index.html.erb
+++ b/app/views/colocs/index.html.erb
@@ -18,7 +18,9 @@
         <td><%= coloc.adress %></td>
         <td><%= link_to 'Show', coloc  %></td>
         <td><%= link_to 'Edit', edit_coloc_path(coloc) %></td>
+        <% if current_user.coloc_id == coloc.id %>
         <td><%= link_to 'Destroy', coloc_path(coloc), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -27,3 +29,10 @@
 <br>
 
 <%= link_to 'New Coloc', new_coloc_path %>
+
+<div id="map-canvas" style="height: 200px"></div>
+
+<script type="text/javascript">
+  window.data = <%= @colocs.to_json.html_safe %>;
+  window.page = 'home';
+</script> 
