--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,6 @@
 <div id="map-canvas" style="height: 200px"></div>
 
 <script type="text/javascript">
-  window.data = <%= @coloc.to_json.html_safe %>;
+  window.data = <%= @colocs.to_json.html_safe %>;
   window.page = 'home';
 </script> 
