--- a/app/views/colocs/index.html.erb
+++ b/app/views/colocs/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= coloc.adress %></td>
         <td><%= link_to 'Show', coloc %></td>
         <td><%= link_to 'Edit', edit_coloc_path(coloc) %></td>
-        <% if current_user.coloc_id == coloc.id %>
+        <% if current_user.coloc_id == coloc.id || current_user.admin == 1 %>
         <td><%= link_to 'Destroy', coloc_path(coloc), method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
